--- a/src/main/resources/application.yml
+++ b/src/main/resources/application.yml
@@ -13,7 +13,6 @@ spring:
 mybatis-plus:
   # config-location: classpath:mybatis-config.xml
   mapper-locations: classpath:mapper/**/*Mapper.xml  #指定mapper.xml的位置
-  # type-aliases-package: com.company.basemanager.entity
   global-config:
     db-config:
       id-type: id_worker  # 主键策略全局配置:雪花算法
@@ -21,7 +20,7 @@ mybatis-plus:
 logging:
   level:
     root: info
-    com.company.basemanager.mapper: trace  # mybatis-plus很多日志都是这个级别
-  pattern:
-    console: '%p%m%n' #p:级别 m:内容 n:换行
+    com.company.project.**.mapper: trace  # mybatis-plus很多日志都是这个级别
+#  pattern:
+#    console: '%p%m%n' #p:级别 m:内容 n:换行
 
