--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -7,7 +7,7 @@ server:
 spring:
   datasource:
     driver-class-name: com.mysql.cj.jdbc.Driver   #mysql-connector-java 6以上不再使用com.mysql.jdbc.Driver
-    url: jdbc:mysql://127.0.0.1:3306/basemanager?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2B8   #时区东八区
+    url: jdbc:mysql://127.0.0.1:3306/myadmin?useUnicode=true&useSSL=false&characterEncoding=utf8&serverTimezone=GMT%2B8   #时区东八区
     username: root
     password: root
 
@@ -16,12 +16,12 @@ mybatis-plus:
   mapper-locations: classpath:mapper/**/*Mapper.xml  #指定mapper.xml的位置
   global-config:
     db-config:
-      id-type: id_worker  # 主键策略全局配置:雪花算法
+      id-type: auto
 
 logging:
   level:
     root: info
-    com.company.project.**.mapper: trace  # mybatis-plus很多日志都是这个级别
+#    com.company.project.**.mapper: trace  # mybatis-plus很多日志都是这个级别
 #  pattern:
 #    console: '%p%m%n' #p:级别 m:内容 n:换行
 
