登陆登出、获取当前用户、跨域支持

--- a/src/main/resources/application-dev.yml
+++ b/src/main/resources/application-dev.yml
@@ -21,7 +21,7 @@ mybatis-plus:
 logging:
   level:
     root: info
-#    com.company.project.**.mapper: trace  # mybatis-plus很多日志都是这个级别
-#  pattern:
-#    console: '%p%m%n' #p:级别 m:内容 n:换行
+    com.company.project.**.mapper: trace  # mybatis-plus很多日志都是这个级别
+  pattern:
+    console: '%p%m%n' #p:级别 m:内容 n:换行
 
