--- a/pom.xml
+++ b/pom.xml
@@ -81,6 +81,16 @@
                 <artifactId>spring-boot-maven-plugin</artifactId>
             </plugin>
         </plugins>
+
+        <resources>
+            <!-- maven打包默认不会将xml文件打包到src目录下，此配置允许xml输出到src目录下，实现mapper和xml放在一起 -->
+            <resource>
+                <directory>src/main/java</directory>
+                <includes>
+                    <include>**/*.xml</include>
+                </includes>
+            </resource>
+        </resources>
     </build>
 
 </project>
